Give Rainbox a fixed height on mobile device

--- a/src/scss/Drawer.module.scss
+++ b/src/scss/Drawer.module.scss
@@ -5,10 +5,10 @@
 $row-height: min-content;
 
 .drawer {
-  width: 75vw;
+  width: 300px;
   // background: black;
   background: colors.$blue-100;
-  height: 100vh - Rainbox.$rainbox-height;
+  height: 100%;
   position: fixed;
   top: Rainbox.$rainbox-height;
   right: 0;
